4.1. Сканирование файловой системы. [#106929 #204785]